# ByteTrack-cpp

./: CMakeLists.txt  README.md
include/ByteTrack/: BYTETracker.h  KalmanFilter.h  Object.h  STrack.h  lapjv.h
src/: BYTETracker.cpp  KalmanFilter.cpp  STrack.cpp  lapjv.cpp
test/: test_BYTETracker.cpp
